tests/ui/rustdoc/doc-primitive.stderr
error: unknown `doc` attribute `primitive`
  --> $DIR/doc-primitive.rs:3:7
   |
LL | #[doc(primitive = "foo")]
   |       ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/doc-primitive.rs:1:9
   |
LL | #![deny(invalid_doc_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

